objects/Hotel__c.object
<CustomObject>
    <description>Contains a hotel object and its data</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address to the hotel containing street name and number. For the city refer to &apos;City&apos; field</description>
        <label>Address</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Contains the city name where hotel is located</description>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contains an email address of the hotel</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact phone for the hotel</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Contains a data about hotel&apos;s rating (1-5 stars)</description>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Contains hotel&apos;s website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Hotel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>